chore: new build files 4

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rosettanet-starknetjs-impl",
+  "name": "rosettanetstarknetjsimpl",
   "version": "1.0.0",
   "author": "Digine-Labs",
   "license": "MIT",
@@ -29,9 +29,9 @@
   "scripts": {
     "prepare": "npm run build && husky",
     "build": "tsup && npm run build:esm && npm run build:iife && npm run build:dts",
-    "build:esm": "tsup --clean false --format esm --platform node --keep-names",
-    "build:iife": "tsup --clean false --format iife --platform browser --keep-names",
-    "build:dts": "tsup --clean false --dts-only --keep-names",
+    "build:esm": "tsup --clean false --format esm --platform node",
+    "build:iife": "tsup --clean false --format iife --platform browser",
+    "build:dts": "tsup --clean false --dts-only",
     "lint": "eslint",
     "format": "prettier --write 'src/**/*.{ts,tsx,json,md}'",
     "test": "jest"
