--- a/tsconfig.json
+++ b/tsconfig.json
@@ -92,6 +92,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     // "skipLibCheck": true                              /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*", "tests/**/*, src"],
   "exclude": ["node_modules"]
 }
